--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,1 +1,7 @@
-font-family: "Gill Sans Extrabold", sans-serif;
+.body{
+    font-family: "Lucida Console", Courier, monospace;
+}
+
+.h1{
+    color:#08D9D6;
+}
