--- a/Home.css
+++ b/Home.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/pexelsphoto1732414.jpeg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url("images/HomePageBG.jpg");
   background-position: 50% 50%;
 }
 
