--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -356,7 +356,7 @@
 }
 
 .u-section-3 .u-image-1 {
-  background-image: url("images/pexelsphoto1030974.jpeg");
+  background-image: url("../images/pexelsphoto1030974.jpeg");
   min-height: 660px;
   background-position: 50% 50%;
 }
