--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,9 +4,69 @@
  * Copyright 2014-2021 Froala Labs
  */
 
+ 
+
+.resume-block{
+  margin-top:15%;
+  margin-left: 5%;
+  
+}
+
+.resume-block h3{
+  color:#FF2E63;
+}
+/* CSS */
+.pink-button {
+  border: 2px #FF2E63 ;
+  appearance: none;
+  border-radius: 25px;
+  box-sizing: border-box;
+  background-color: #FF2E63;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: normal;
+  margin: 0;
+  min-height: 25px;
+  min-width: 0;
+  outline: none;
+  padding: 16px 24px;
+  text-align: center;
+  text-decoration: none;
+  transition: all 300ms cubic-bezier(.23, 1, 0.32, 1);
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  width: 20%;
+  will-change: transform;
+}
+
+.pink-button:disabled {
+  pointer-events: none;
+}
+
+.pink-button:hover {
+  
+  color: #FF2E63;
+  border-width: thin;
+  
+  background-color: #fff;
+  transform: translateY(-2px);
+}
+
+.pink-button:active {
+  box-shadow: none;
+  opacity: .5;
+}
+
+
+
+
 #experiences{
-    background-color:gainsboro;
-    height:90%;
+    background-color:#252A34;
+    height:100%;
     border-radius: 20px;
 }
 
@@ -122,188 +182,7 @@
       .fr-view blockquote blockquote blockquote {
         border-color: #43A047;
         color: #43A047; } */
-  .fr-view span.fr-emoticon {
-    font-weight: normal;
-    font-family: "Apple Color Emoji","Segoe UI Emoji","NotoColorEmoji","Segoe UI Symbol","Android Emoji","EmojiSymbols";
-    display: inline;
-    line-height: 0; }
-    .fr-view span.fr-emoticon.fr-emoticon-img {
-      background-repeat: no-repeat !important;
-      font-size: inherit;
-      height: 1em;
-      width: 1em;
-      min-height: 20px;
-      min-width: 20px;
-      display: inline-block;
-      margin: -.1em .1em .1em;
-      line-height: 1;
-      vertical-align: middle; }
-  .fr-view .fr-text-gray {
-    color: #AAA !important; }
-  .fr-view .fr-text-bordered {
-    border-top: solid 1px #222;
-    border-bottom: solid 1px #222;
-    padding: 10px 0; }
-  .fr-view .fr-text-spaced {
-    letter-spacing: 1px; }
-  .fr-view .fr-text-uppercase {
-    text-transform: uppercase; }
-  .fr-view .fr-class-highlighted {
-    background-color: #ffff00; }
-  .fr-view .fr-class-code {
-    border-color: #cccccc;
-    border-radius: 2px;
-    -moz-border-radius: 2px;
-    -webkit-border-radius: 2px;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box;
-    background: #f5f5f5;
-    padding: 10px;
-    font-family: "Courier New", Courier, monospace; }
-  .fr-view .fr-class-transparency {
-    opacity: 0.5; }
-  .fr-view img {
-    position: relative;
-    max-width: 100%; }
-    .fr-view img.fr-dib {
-      margin: 10px auto;
-      display: block;
-      float: none;
-      vertical-align: top; }
-      .fr-view img.fr-dib.fr-fil {
-        margin-left: 0;
-        text-align: left; }
-      .fr-view img.fr-dib.fr-fir {
-        margin-right: 0;
-        text-align: right; }
-    .fr-view img.fr-dii {
-      display: inline-block;
-      float: none;
-      vertical-align: bottom;
-      margin-left: 5px;
-      margin-right: 5px;
-      max-width: calc(100% - (2 * 5px)); }
-      .fr-view img.fr-dii.fr-fil {
-        float: left;
-        margin: 10px 15px 10px 0;
-        max-width: calc(100% - 5px); }
-      .fr-view img.fr-dii.fr-fir {
-        float: right;
-        margin: 10px 0 10px 15px;
-        max-width: calc(100% - 5px); }
-  .fr-view span.fr-img-caption {
-    position: relative;
-    max-width: 100%; }
-    .fr-view span.fr-img-caption.fr-dib {
-      margin: 5px auto;
-      display: block;
-      float: none;
-      vertical-align: top; }
-      .fr-view span.fr-img-caption.fr-dib.fr-fil {
-        margin-left: 0;
-        text-align: left; }
-      .fr-view span.fr-img-caption.fr-dib.fr-fir {
-        margin-right: 0;
-        text-align: right; }
-    .fr-view span.fr-img-caption.fr-dii {
-      display: inline-block;
-      float: none;
-      vertical-align: bottom;
-      margin-left: 5px;
-      margin-right: 5px;
-      max-width: calc(100% - (2 * 5px)); }
-      .fr-view span.fr-img-caption.fr-dii.fr-fil {
-        float: left;
-        margin: 5px 5px 5px 0;
-        max-width: calc(100% - 5px); }
-      .fr-view span.fr-img-caption.fr-dii.fr-fir {
-        float: right;
-        margin: 5px 0 5px 5px;
-        max-width: calc(100% - 5px); }
-  .fr-view .fr-video {
-    text-align: center;
-    position: relative; }
-    .fr-view .fr-video.fr-rv {
-      padding-bottom: 56.25%;
-      padding-top: 30px;
-      height: 0;
-      overflow: hidden; }
-      .fr-view .fr-video.fr-rv > iframe, .fr-view .fr-video.fr-rv object, .fr-view .fr-video.fr-rv embed {
-        position: absolute !important;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%; }
-    .fr-view .fr-video > * {
-      -webkit-box-sizing: content-box;
-      -moz-box-sizing: content-box;
-      box-sizing: content-box;
-      max-width: 100%;
-      border: none; }
-    .fr-view .fr-video.fr-dvb {
-      display: block;
-      clear: both; }
-      .fr-view .fr-video.fr-dvb.fr-fvl {
-        text-align: left; }
-      .fr-view .fr-video.fr-dvb.fr-fvr {
-        text-align: right; }
-    .fr-view .fr-video.fr-dvi {
-      display: inline-block; }
-      .fr-view .fr-video.fr-dvi.fr-fvl {
-        float: left; }
-      .fr-view .fr-video.fr-dvi.fr-fvr {
-        float: right; }
-  .fr-view a.fr-strong {
-    font-weight: 700; }
-  .fr-view a.fr-green {
-    color: green; }
-  .fr-view .fr-img-caption {
-    text-align: center; }
-    .fr-view .fr-img-caption .fr-img-wrap {
-      padding: 0;
-      margin: auto;
-      text-align: center;
-      width: 100%; }
-      .fr-view .fr-img-caption .fr-img-wrap a {
-        display: block; }
-      .fr-view .fr-img-caption .fr-img-wrap img {
-        display: block;
-        margin: auto;
-        width: 100%; }
-      .fr-view .fr-img-caption .fr-img-wrap > span {
-        margin: auto;
-        display: block;
-        padding: 5px 5px 10px;
-        font-size: 14px;
-        font-weight: initial;
-        -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-        box-sizing: border-box;
-        -webkit-opacity: 0.9;
-        -moz-opacity: 0.9;
-        opacity: 0.9;
-        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-        width: 100%;
-        text-align: center; }
-  .fr-view button.fr-rounded, .fr-view input.fr-rounded, .fr-view textarea.fr-rounded {
-    border-radius: 10px;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    -moz-background-clip: padding;
-    -webkit-background-clip: padding-box;
-    background-clip: padding-box; }
-  .fr-view button.fr-large, .fr-view input.fr-large, .fr-view textarea.fr-large {
-    font-size: 24px; }
-
-/**
- * Image style.
- */
-a.fr-view.fr-strong {
-  font-weight: 700; }
-a.fr-view.fr-green {
-  color: green; }
-
+  
 /**
  * Link style.
  */
@@ -531,37 +410,13 @@ textarea {
   overflow: auto;
   outline: none;
 }
-button,
+
 select,
 input,
 textarea {
   outline: none;
 }
-[type="checkbox"],
-[type="radio"] {
-  box-sizing: border-box;
-  padding: 0;
-}
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
-  height: auto;
-}
-[type="search"] {
-  -webkit-appearance: textfield;
-  outline-offset: -2px;
-}
-[type="search"]::-webkit-search-cancel-button,
-[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
-::-webkit-input-placeholder {
-  color: inherit;
-  opacity: 0.54;
-}
-::-webkit-file-upload-button {
-  -webkit-appearance: button;
-  font: inherit;
-}
+
 ul,
 ol {
   padding-left: 20px;
@@ -37607,7 +37462,7 @@ a.u-button-style.u-button-style.u-text-palette-1-dark-3:active,
 a.u-button-style.u-button-style.u-text-palette-1-dark-3[class*="u-border-"]:active,
 a.u-button-style.u-button-style.u-text-palette-1-dark-3.active,
 a.u-button-style.u-button-style.u-text-palette-1-dark-3[class*="u-border-"].active {
-  color: #25292e !important;
+  color: #FF2E63 !important;
 }
 a.u-button-style:hover > .u-text-hover-palette-1-dark-3,
 a.u-button-style:hover > .u-text-hover-palette-1-dark-3[class*="u-border-"],
@@ -37996,7 +37851,7 @@ li.active > a.u-button-style.u-text-palette-1-base,
 li.active > a.u-button-style.u-text-palette-1-base[class*="u-border-"],
 a.u-button-style.u-text-palette-1-base,
 a.u-button-style.u-text-palette-1-base[class*="u-border-"] {
-  color: #478ac9 !important;
+  color: #FF2E63 !important;
 }
 a.u-button-style.u-text-palette-1-base:hover,
 a.u-button-style.u-text-palette-1-base[class*="u-border-"]:hover,
@@ -38031,14 +37886,14 @@ a.u-button-style.u-button-style.active > .u-text-active-palette-1-base[class*="u
 .u-text-hover-palette-1-base.u-carousel-control:hover,
 .u-popupmenu-items.u-text-hover-palette-1-base .u-nav-link:hover,
 .u-popupmenu-items.u-popupmenu-items.u-text-active-palette-1-base .u-nav-link.active {
-  color: #478ac9 !important;
+  color: #FF2E63 !important;
 }
 .u-text-palette-1-base .u-svg-link,
 .u-text-hover-palette-1-base:hover .u-svg-link,
 .u-button-style:hover > .u-text-hover-palette-1-base .u-svg-link,
 .u-button-style.u-button-style.active > .u-text-active-palette-1-base .u-svg-link,
 .u-text-hover-palette-1-base:focus .u-svg-link {
-  fill: #478ac9;
+  fill: #FF2E63;
 }
 .u-link.u-text-palette-1-base:hover {
   color: #387cbd !important;
