--- a/src/css/style.css
+++ b/src/css/style.css
@@ -4,6 +4,11 @@
  * Copyright 2014-2021 Froala Labs
  */
 
+@import url("https://fonts.googleapis.com/css?family=Noto+Sans+TC&display=swap");
+.body{
+font-family: "Helvetica", "Arial","LiHei Pro","黑體-繁","微軟正黑體", sans-serif !important;
+}
+
 .social-media-links {
 	margin-top: 5%;
 	width: 430px;
