--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -32,6 +32,105 @@
   padding: 10px;
 }
 
+
+.section-title{
+  display: flex;
+	flex-wrap: nowrap;
+  flex-direction: column;
+		align-items: center;
+}
+.section-title h2{
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin: 20px 0 0;
+  position: relative;
+  padding: 0;
+  margin-top: 0;
+	margin-bottom: 0.5rem;
+	line-height: 1.2;
+	font-weight: 500;
+}
+.section-title h3{
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  margin: 42px 0 0;
+}
+.wrapper{
+  width:100%;
+  height:100%;
+  min-height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  
+  background-color: rgb(27, 22, 22);
+  background-image:'../images/HomePageBG.jpg';
+  /*background-image: url("https://images.pexels.com/photos/3503629/pexels-photo-3503629.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940");*/
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; 
+}
+.wrapper .box{
+  position: relative;
+  width:26%;
+  height:400px;
+  box-shadow: 20px 20px 50px rgba(0,0,0,0.5);
+  border-radius:15px;
+  margin:30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-top:1px solid rgba(255,255,255,0.5);
+  border-left:1px solid rgba(255,255,255,0.5);
+  backdrop-filter: blur(5px);
+  transform-style: preserve-3d;
+  transform: perspective(800px) 
+}
+.wrapper .description{
+  padding-left: 10%;
+  padding-right: 10%;
+  margin: 25px 0;
+}
+.box h2{
+  color:#f5f5f5;
+  font-size:2rem;
+  text-align: center;
+  font-family: 'Acme', sans-serif;
+}
+.box p{
+    color:#ccc;
+    margin:1%;
+    padding: 3%;
+    font-family: 'Fira Code', monospace;
+}
+.card {
+  max-width: 300px;
+  min-height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  max-width: 500px;
+  height: 300px;
+  padding: 35px;
+
+  border: 1px solid rgba(255, 255, 255, .25);
+  border-radius: 20px;
+  background-color: rgba(24, 5, 5, 0.45);
+  box-shadow: 0 0 10px 1px rgba(239, 236, 236, 0.25) 0.25)
+
+  backdrop-filter: blur(15px);
+  color: rgba(0,0,0,0);
+}
+ 
+.card-footer {
+  font-size: 0.65em;
+  color: #446;
+}
+
+
 @media (max-width: 1199px) {
   .u-section-1 .u-group-1 {
     margin-right: initial;
@@ -131,7 +230,7 @@
   padding-left: 20px;
 }
 
-.u-section-2 .u-text-1 {
+.u-section-2 . -1 {
   margin-left: 0;
   margin-right: 20px;
   text-transform: uppercase;
@@ -336,6 +435,7 @@
   text-transform: uppercase;
   letter-spacing: 4px;
   margin: 20px 0 0;
+  
 }
 
 .u-section-3 .u-text-2 {
@@ -753,17 +853,8 @@
   margin: 0 auto 0 0;
 }
 
-.u-section-4 .u-image-1 {
-  background-image: url("images/pexelsphoto118009.jpeg");
-  min-height: 468px;
-  background-position: 50% 50%;
-}
 
-.u-section-4 .u-image-2 {
-  background-image: url("images/pexelsphoto1662518.jpeg");
-  min-height: 468px;
-  background-position: 50% 50%;
-}
+
 
 .u-section-4 .u-layout-cell-3 {
   min-height: 314px;
