--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -155,6 +155,7 @@
   
 }
 .wrapper .description {
+  font-family: 'Courier New', Courier, monospace;
 	padding-left: 10%;
 	padding-right: 10%;
 	margin: 25px 0;
@@ -220,6 +221,7 @@
 }
 
 .info-board {
+  opacity: 0.8;
 	background-color: #fff;
 	border-radius: 10px;
 	box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
@@ -229,6 +231,11 @@
   margin-left: 5%;
 	/* overflow: hidden; */
 	/* width:100%; */
+}
+
+.info-board:hover {
+  opacity: 1;
+  transform: scale(1.05);
 }
 
 .info-board h6 {
@@ -263,7 +270,9 @@
   font-family: 'Courier New', Courier, monospace;
 }
 
-
+.project-title:hover{
+  transform: scale(1.05);
+}
 
 
 @media (max-width: 1199px) {
@@ -643,209 +652,6 @@
 	letter-spacing: 4px;
 }
 
-.u-section-3 .u-text-7 {
-	margin-right: 0;
-	margin-left: 0;
-}
 
-.u-section-3 .u-layout-cell-5 {
-	background-image: none;
-	min-height: 220px;
-}
 
-.u-section-3 .u-container-layout-5 {
-	padding-left: 20px;
-	padding-right: 20px;
-}
-
-.u-section-3 .u-icon-4 {
-	height: 40px;
-	width: 40px;
-	margin: 20px auto 20px 0;
-	padding: 10px;
-}
-
-.u-section-3 .u-text-8 {
-	margin-left: 0;
-	margin-right: 0;
-	text-transform: uppercase;
-	letter-spacing: 4px;
-}
-
-.u-section-3 .u-text-9 {
-	margin-right: 0;
-	margin-left: 0;
-}
-
-@media (max-width: 1199px) {
-	.u-section-3 .u-layout-wrap-1 {
-		margin-right: initial;
-		margin-left: initial;
-	}
-
-	.u-section-3 .u-container-layout-1 {
-		padding-left: 16px;
-		padding-right: 16px;
-	}
-
-	.u-section-3 .u-text-1 {
-		position: relative;
-	}
-
-	.u-section-3 .u-text-2 {
-		position: relative;
-		font-size: 3rem;
-	}
-
-	.u-section-3 .u-text-3 {
-		position: relative;
-	}
-
-	.u-section-3 .u-icon-1 {
-		height: 53px;
-		width: 53px;
-	}
-
-	.u-section-3 .u-container-layout-3 {
-		padding-left: 16px;
-		padding-right: 16px;
-	}
-
-	.u-section-3 .u-icon-2 {
-		height: 33px;
-		width: 33px;
-	}
-
-	.u-section-3 .u-text-4 {
-		position: relative;
-	}
-
-	.u-section-3 .u-text-5 {
-		position: relative;
-	}
-
-	.u-section-3 .u-container-layout-4 {
-		padding-left: 16px;
-		padding-right: 16px;
-	}
-
-	.u-section-3 .u-icon-3 {
-		height: 33px;
-		width: 33px;
-	}
-
-	.u-section-3 .u-text-6 {
-		position: relative;
-	}
-
-	.u-section-3 .u-text-7 {
-		position: relative;
-	}
-
-	.u-section-3 .u-container-layout-5 {
-		padding-left: 16px;
-		padding-right: 16px;
-	}
-
-	.u-section-3 .u-icon-4 {
-		height: 33px;
-		width: 33px;
-	}
-
-	.u-section-3 .u-text-8 {
-		position: relative;
-	}
-
-	.u-section-3 .u-text-9 {
-		position: relative;
-	}
-}
-
-@media (max-width: 991px) {
-	.u-section-3 .u-sheet-1 {
-		min-height: 1204px;
-	}
-
-	.u-section-3 .u-layout-wrap-1 {
-		margin-top: 20px;
-		margin-bottom: 0;
-		margin-right: initial;
-		margin-left: initial;
-	}
-
-	.u-section-3 .u-layout-cell-1 {
-		min-height: 556px;
-	}
-
-	.u-section-3 .u-container-layout-1 {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.u-section-3 .u-text-1 {
-		margin-top: 55px;
-	}
-
-	.u-section-3 .u-icon-1 {
-		height: 40px;
-		width: 40px;
-		margin-bottom: 55px;
-	}
-
-	.u-section-3 .u-image-1 {
-		min-height: 583px;
-	}
-
-	.u-section-3 .u-layout-cell-3 {
-		min-height: 194px;
-	}
-
-	.u-section-3 .u-container-layout-3 {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.u-section-3 .u-icon-2 {
-		height: 25px;
-		width: 25px;
-		margin-top: 0;
-	}
-
-	.u-section-3 .u-text-5 {
-		margin-bottom: 0;
-	}
-
-	.u-section-3 .u-layout-cell-4 {
-		min-height: 194px;
-	}
-
-	.u-section-3 .u-container-layout-4 {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.u-section-3 .u-icon-3 {
-		height: 25px;
-		width: 25px;
-		margin-top: 0;
-	}
-
-	.u-section-3 .u-text-7 {
-		margin-bottom: 0;
-	}
-
-	.u-section-3 .u-layout-cell-5 {
-		min-height: 194px;
-	}
-
-	.u-section-3 .u-container-layout-5 {
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.u-section-3 .u-icon-4 {
-		height: 25px;
-		width: 25px;
-		margin-top: 0;
-	}
 
