--- a/src/css/style.css
+++ b/src/css/style.css
@@ -151,6 +151,7 @@ a.menu-btn {
 }
 /* CSS */
 .pink-button {
+	float:right;
 	border: 2px #ff2e63;
 	appearance: none;
 	border-radius: 25px;
@@ -162,11 +163,11 @@ a.menu-btn {
 	font-size: 16px;
 	font-weight: 400;
 	line-height: normal;
-	margin: 0;
-	min-height: 25px;
+	margin: 2% ;
+	min-height: 5px;
 	min-width: 0;
 	outline: none;
-	padding: 16px 24px;
+	padding: 2%;
 	text-align: center;
 	text-decoration: none;
 	transition: all 300ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -230,7 +231,8 @@ a.menu-btn {
 }
 
 html {
-	font-family: sans-serif;
+	/* font-family: sans-serif; */
+	font-family: 'Courier New', Courier, monospace;
 	-ms-text-size-adjust: 100%;
 	-webkit-text-size-adjust: 100%;
 }
