--- a/src/css/style_clean.css
+++ b/src/css/style_clean.css
@@ -45,6 +45,7 @@
 	margin-left: 10%;
 	justify-content: center;
 	align-items: center;
+	position: relative;
 }
 
 .social-item a {
@@ -64,12 +65,12 @@
 
 .social-item i {
 	position: absolute;
-	padding-top: 1rem;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) scale(1.4);
 	display: block;
-	transform: scale(1.4);
-	justify-content: center;
-	width: 3.5rem;
 	color: #ff2e63;
+	z-index: 1;
 }
 
 .social-item i:hover {
@@ -208,11 +209,16 @@ a.menu-btn {
 .logo-image {
 	max-width: 100%;
 	height: auto;
+	position: relative;
+	z-index: 1;
+	display: block;
 }
 
 /* Avatar */
 #avatar {
 	border-radius: 50%;
+	position: relative;
+	z-index: 1;
 }
 
 /* About section */
@@ -247,7 +253,28 @@ header {
 	position: fixed;
 	top: 0;
 	width: 100%;
-	z-index: 1000;
+	z-index: 100;
+}
+
+/* Header content container */
+.u-sheet-1 {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: relative;
+}
+
+/* Header logo positioning */
+.u-image-1 {
+	position: relative;
+	z-index: 1;
+	flex-shrink: 0;
+}
+
+/* Navigation container */
+nav {
+	position: relative;
+	z-index: 1;
 }
 
 /* Navigation */
